Horizontal scroll fixed.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -155,8 +155,8 @@ nav {
 .heroGif {
   position: absolute;
   margin: 2rem;
-  height: 55%;
-  width: 55%;
+  height: 50%;
+  width: 50%;
 }
 
 .btn {
